resumeBuilder/src/App.css
#root {
  position: absolute;
  top: 50px;
  left: 300px;
  margin: 0 auto;
  padding: 2rem;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

#mainlayout {
  padding-left: 0px;
}

.read-the-docs {
  color: #888;
}

.App {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  gap: 7em;
}

.left-half {
  border-radius: 12px;
  padding: 18px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  width: 36rem;
}

.right-half {
  margin-top: 17px;
  height: 80vh;
  width: 50rem;
  background-color: white;
  overflow: auto; /* Add scrollbars if content overflows */
  border-radius: 6px;
  border: none;
}

.innerH2 {
  font-size: 1.25rem;
  color: var(--purple);
}

.input-text {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  color: var(--txt);
  margin-left: 8px;
  font-size: 17px;
}

.input-field {
  border-width: 1px;
  padding: 10px;
  font-size: 1rem;
  gap: 8px;
}

.inputs {
  border-radius: 10px;
  background-color: rgb(61, 61, 64);
  border-color: rgb(61, 61, 64);
  color: white;
  font-size: 17px;
  padding: 10px;
}

.fullWidth {
  width: 91%;
  margin-top: 12px;
}

#country, #endDate {
  margin-left: 24px;
}

.inputs:focus {
  color: rgb(117, 117, 117);
  background-color: black;
  font-family: 'Quicksand', sans-serif;
  border: 2px solid var(--purple);
  transition-duration: .3s;
  color: white;
}

.personal, .professional, .education {
  display: grid;
  gap: 12px;
}

#pers {
  margin-bottom: 8px;
}

.emailNumber {
  display: flex;
  flex-direction: row;
  margin: 0px;
}

.education {
  padding: 12px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
}

#profTitle {
  margin-top: 0;
  margin-bottom: 0;
}

#addButtonProf {
  margin-top: 8px;
  padding-bottom: 12px;
}

#educationBottom {
  display: flex;
  flex-direction: column;
  gap: 18px;
  width: 100%;
}

.educationInputs {
  width: 100%;
}

.titleSection {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 20px;
}

.eduTitle {
  padding: 20px;
}

.personal {
  padding: 12px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
}

.titleSection {
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
  margin-top: 8px;
  margin-bottom: 8px;
}

#allProf {
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
}

#careerSummaryPersonal {
  max-width: 529.008px;
  max-height: 400px;
  min-height: 64px;
  border-radius: 10px;
  font-size: 17px;
  font-family: 'Quicksand', sans-serif;
}

#emailPersonal {
  width: 270px;
  margin-top: 12px;
}

#phonePersonal {
  margin-top: 12px;
}

#city, #country, #startDate, #endDate, #email, #phone {
 width: 100%; 
 gap: 12px;
}

html {
  height: 100vh;
}

/* App.css (or your preferred CSS file) */

.accordion {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.accordion-section {
  background-color: rgb(29, 29, 32);
  border-radius: 12px;
  padding: 8px;
  padding-left: 12px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  margin-bottom: 10px; /* Adds a gap between sections */
  overflow: hidden;
}

.accordion-section.open {
  border-color: #007bff; /* Border color when section is open */
}

.accordion h2 {
  margin: 0;
  padding: 10px;
  cursor: pointer;
}

.accordion-content {
  padding: 10px;
}

.left-half h2 {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  font-size: 24px;
}

.open {
  transform: rotate(180deg); /* Rotate the icon 180 degrees when the section is open */
  transition: transform 0.3s ease; /* Apply a 0.3s transition to the transform property */
}

.checkbox {
  height: 25px;
  width: 25px;
}

.checkbox:hover {
  cursor: pointer;
}

#presentBox {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

figure {
  max-width: 100%; /* Adjust as needed to control the width */
  max-height: 100%; /* Adjust as needed to control the height */
}

hr {
  width: 100%;
}

.subLabel {
  color: white;
  font-size: 12px;
  padding: 4px;
  margin-left: 8px;
}

.saveCancel {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

button {
  width: 88px;
  height: 32px;
  border-radius: 14px;
  border: none;
  color: white;
  background-color: var(--purple);
  font-weight: bold;
}

button:hover {
  cursor: pointer;
}

#userInfo {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#begin {
  float: right;
  white-space: nowrap;
}

#position {
  width: 95%;
}

.datePickers {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.selectInputs {
  display: flex;
  flex-direction: row;
  gap: 8px;
  z-index: 1;
}

.presentCheck {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  margin-right: 10px;
  height: 50px;
  margin-bottom: 10px;
}

.isPresent {
  position: relative;
  bottom: 7.5px;
  right: 8px;
  color: rgb(203, 200, 200);
}

.saveButton {
  position: relative;
  margin-top: 20px;
  left: 297px;
  height: 60px;
  width: 120px;
  border-radius: 20px;
  font-size: 24px;
}

.cancelButton {
  position: relative;
  left: 280px;
  height: 60px;
  width: 120px;
  border-radius: 20px;
  font-size: 24px;
  background-color: transparent;
}

/* QUILL EDITOR FORMATTING */
.employer-description p {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 10pt;
  font-family: "Montserrat";
  font-style: normal;
}

.employer-description h1 {
  font-weight: 400;
  font-size: 20pt;
  font-family: "Arial";
  color: #000000;
  text-decoration: none;
  vertical-align: baseline;
  font-style: normal;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  page-break-after: avoid;
}

.professional h2 {
  color: #757575;
}

.employer-description h2 {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 16pt;
  font-family: "Arial";
  font-style: normal;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  page-break-after: avoid;
}

.employer-description h3 {
  font-size: 14pt;
  color: #434343;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
  font-style: normal;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.05;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
  page-break-after: avoid;
}

.employer-description strong {
  font-size: 10pt;
  font-weight: 700;
  font-family: "Montserrat";
  color: #000000;
  text-decoration: none;
  vertical-align: baseline;
  font-style: normal;
  padding-top: 0pt;
  padding-bottom: 0.5pt;
  line-height: 1.05;
  orphans: 2;
  widows: 2;
  text-align: left;
  margin: 0;
}

.employer-description em {
  font-family: "Montserrat";
  font-style: italic;
  font-weight: 400;
  color: #000000;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 10pt;
  padding-top: 0pt;
  padding-bottom: 0.5pt;
  line-height: 1.05;
  orphans: 2;
  widows: 2;
  text-align: left;
  margin: 0;
}

.employer-description u {
  color: #000000;
  vertical-align: baseline;
  font-size: 10pt;
  font-style: normal;
  text-decoration-skip-ink: none;
  font-family: "Montserrat";
  font-weight: 400;
  text-decoration: underline;
  padding-top: 0pt;
  padding-bottom: 0.5pt;
  line-height: 1.05;
  orphans: 2;
  widows: 2;
  text-align: left;
  margin: 0;
}

.employer-description li {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 10pt;
  font-family: "Montserrat";
  font-style: normal;
  padding-top: 0pt;
  padding-bottom: 0.5pt;
  line-height: 1.05;
  orphans: 2;
  widows: 2;
  text-align: left;
}

.employer-description ul {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 10pt;
  font-family: "Montserrat";
  font-style: normal;
  padding-top: 0px;
  padding-bottom: 0.5pt;
  line-height: 1.05;
  orphans: 2;
  widows: 2;
  text-align: left;
  margin: 0px;
}
.employer-description ol {
padding-inline-start: 40px;
}

.titleWhite {
  color: white;
}

.titleSection:hover {
  cursor: pointer;
}

.collapsed {
  display: none;
  gap: 12px;
  width: 100%;
}

.titleGrey {
  color: #757575;
}

.professional {
  padding: 12px;
}

.hide-section {
  display: none;
}

.move-section {
  position: relative;
  bottom: 60px;
}

#top-top {
  display: flex;
  flex-direction: row;
  margin-top: 48px;
  font-size: 20px;
  max-width: 500px;
}

.topSubtitle {
  display: flex;
  flex-direction: row;
}

#top-right {
  font-style: italic;
  font-weight: normal;
}

#bottom-bottom {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 12px;
  margin-top: 10px;
}

#bottom-row {
  display: flex;
  flex-direction: row;
  gap: 12px;
}

#bottom-left {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  font-size: 18px;
}

#bottom-right {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  font-size: 18px;
}

#profHist {
  color: white;
}

.profHistoryEntry {
  padding: 18px;
  margin-top: 10px;
}

#topLine {
  position: relative;
  top: 24px;
}



.toggle-button {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: space-around;
  height: 40px;
}

.toggle-button:hover {
  cursor: pointer;
}

.visible {
  position: relative;
  bottom: 20px;
  height: 40px;
  width: 40px;
}

.hidden {
  position: relative;
  bottom: 20px;
  height: 40px;
  width: 40px;
}

.profInputs {
  display: none;
}

#profHist {
  display: inline;
}

#prof {
  margin-top: 8px;
}

#addProf {
  position: relative;
  left: 120px;
  width: 300px;
  margin-top: 36px;
  bottom: 12px;
  height: 42px;
  font-size: 20px;
}

.ql-toolbar, .ql-container {
  margin-left: 12px !important;
  margin-right: 12px !important;
}

